# token-savior

./: .gitignore  .token-savior-cache.json  LICENSE  README.md  config-analysis-recap.html  llms-install.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/mcp_codebase_index/: __init__.py  annotator.py  csharp_annotator.py  generic_annotator.py  git_tracker.py  go_annotator.py  json_annotator.py  models.py  project_indexer.py  python_annotator.py  query_api.py  rust_annotator.py  server.py  text_annotator.py  typescript_annotator.py
src/token_savior/: annotator.py  config_analyzer.py  dashboard.py  docker_analyzer.py  dockerfile_annotator.py  git_tracker.py  project_indexer.py  query_api.py  server.py  toml_annotator.py  typst_annotator.py
tests/: test_config_analyzer.py  test_docker_analyzer.py  test_git_tracker.py  test_incremental.py  test_markup_csharp.py  test_markup_dockerfile.py  test_markup_go.py  test_markup_json.py  test_markup_python.py  test_markup_rust.py  test_markup_text.py  test_markup_toml.py  test_markup_typescript.py  test_project_indexer.py  test_query_api.py  test_usage_stats.py
